--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ footer {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); /* leichter Schatten */
     border-radius: 10px; /* abgerundete Ecken */
     gap: 10px;
+    font-weight: bold;
 }
 
 
